[gd_scene load_steps=24 format=3 uid="uid://c82iey1rryacy"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_mm6ix"]
[ext_resource type="Texture2D" uid="uid://bieubrjs7s7po" path="res://textures/cockpit/crosshair_ball.png" id="3_7tb5x"]
[ext_resource type="FontFile" uid="uid://c0b73jparcb60" path="res://ui/Source_Code_Pro/static/SourceCodePro-Bold.ttf" id="3_tsdjv"]
[ext_resource type="Texture2D" uid="uid://dehlubwc5lcpe" path="res://textures/cockpit/crosshair_box_yellow.png" id="4_gtmj1"]
[ext_resource type="Material" uid="uid://ck00ajppk6fe8" path="res://materials/unit_metal.tres" id="5_3wou3"]
[ext_resource type="Script" path="res://scripts/gauge_control.gd" id="5_4oxq5"]
[ext_resource type="Texture2D" uid="uid://b8m73klewviwy" path="res://textures/cockpit/crosshair_box_red.png" id="5_8qmgo"]
[ext_resource type="Material" uid="uid://dlcvg6timbtki" path="res://materials/needle.tres" id="5_nrjpl"]
[ext_resource type="PackedScene" uid="uid://cbp6n7n25vpvp" path="res://models/cockpit_sphere.blend" id="6_swywl"]
[ext_resource type="PackedScene" uid="uid://d25w2m7pvefjp" path="res://models/roll_sphere.tscn" id="7_ov2p3"]
[ext_resource type="PackedScene" uid="uid://b4837xdfht2o0" path="res://models/grapple.blend" id="8_5mu7g"]
[ext_resource type="FontFile" uid="uid://6ufyqqecj6o1" path="res://ui/Share_Tech_Mono/ShareTechMono-Regular.ttf" id="9_8bc5l"]
[ext_resource type="Material" uid="uid://bpxi0l621ahdn" path="res://materials/cable.tres" id="10_lnno2"]
[ext_resource type="PackedScene" uid="uid://bjhwsokytak6y" path="res://models/gauges.blend" id="11_l66bj"]
[ext_resource type="Material" uid="uid://by3jlsreis8rn" path="res://materials/attitude_sphere.tres" id="12_5y86p"]
[ext_resource type="Script" path="res://scripts/attitude_indicator.gd" id="12_6ek3y"]
[ext_resource type="Texture2D" uid="uid://mj7p2kfr8ygy" path="res://textures/cockpit/crosshair_box.png" id="12_go2wy"]
[ext_resource type="Script" path="res://scripts/cockpit_sphere.gd" id="14_y10qh"]
[ext_resource type="PackedScene" uid="uid://s5wkwid0pcn2" path="res://models/interface.blend" id="15_w2gm3"]
[ext_resource type="FontFile" uid="uid://b28nn2pbt11jk" path="res://ui/Digital_Display/digital-display.ttf" id="16_h7tg4"]
[ext_resource type="Script" path="res://scripts/speedometer_control.gd" id="17_vwp1p"]

[sub_resource type="SphereShape3D" id="SphereShape3D_v0m4j"]
radius = 0.9

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_7s8xn"]
points = PackedVector3Array(0.05, -0.05, 0, -0.05, 0.05, 0, 0.05, 0.05, 0, -0.05, -0.05, 0, -6, -6, 30, 6, -6, 30, -6, 6, 30, 6, 6, 30)

[node name="Player" type="CharacterBody3D" node_paths=PackedStringArray("camera", "cockpit", "collider", "sphere", "walk_sphere", "ball_sphere", "reticle", "box_display", "grapple_cable", "grapple_cast", "pilot_rig", "seat", "cockpit_light")]
collision_layer = 2
collision_mask = 5
floor_constant_speed = true
floor_max_angle = 0.523599
script = ExtResource("1_mm6ix")
camera = NodePath("Cockpit/Seat/Camera3D")
cockpit = NodePath("Cockpit")
collider = NodePath("PlayerCollision3D")
sphere = NodePath("Cockpit/Sphere")
walk_sphere = NodePath("Cockpit/Sphere/walk_sphere")
ball_sphere = NodePath("Cockpit/Sphere/roll_sphere")
reticle = NodePath("Cockpit/UI/Reticle")
box_display = NodePath("Cockpit/UI/Reticle/box")
box_texture = Array[Texture]([ExtResource("3_7tb5x"), ExtResource("12_go2wy"), ExtResource("4_gtmj1"), ExtResource("5_8qmgo")])
grapple_cable = NodePath("Cockpit/Sphere/walk_sphere/cable_controller")
grapple_cast = NodePath("Cockpit/UI/Reticle/TargetCast")
pilot_rig = NodePath("Cockpit/Seat/pilot_rig")
seat = NodePath("Cockpit/Seat")
cockpit_light = NodePath("Cockpit/CockpitLight")

[node name="PlayerCollision3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_v0m4j")

[node name="Cockpit" type="Node3D" parent="."]

[node name="CockpitLight" type="OmniLight3D" parent="Cockpit"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00385129, 0.0390975, 0.0379313)
layers = 2
light_color = Color(1.63645e-06, 0.31172, 0.835339, 1)
light_energy = 0.2
light_cull_mask = 4294966274
omni_range = 0.228
omni_attenuation = 1.373

[node name="Seat" type="Node3D" parent="Cockpit"]

[node name="Camera3D" type="Camera3D" parent="Cockpit/Seat"]
fov = 90.0
near = 0.001

[node name="pilot_rig" type="Node3D" parent="Cockpit/Seat"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.015)

[node name="gauges" parent="Cockpit/Seat/pilot_rig" instance=ExtResource("11_l66bj")]
transform = Transform3D(0.00418039, 0.00148552, -0.00896201, 0.0032619, 0.00896201, 0.00300706, 0.00847846, -0.00418039, 0.0032619, -0.041, -0.028, -0.018)

[node name="energy_gauge" type="Node3D" parent="Cockpit/Seat/pilot_rig/gauges" node_paths=PackedStringArray("gauge_needle", "gauge_text")]
transform = Transform3D(0.103528, 0.38637, -1.68888e-08, 0, -1.74846e-08, -0.4, -0.38637, 0.103528, -4.52534e-09, -0.226004, 0.946126, -2.26952)
script = ExtResource("5_4oxq5")
type = 1
gauge_needle = NodePath("energy_needle")
gauge_text = NodePath("energy_text")

[node name="energy_needle" type="CSGCylinder3D" parent="Cockpit/Seat/pilot_rig/gauges/energy_gauge"]
transform = Transform3D(0.999999, 2.98023e-08, -4.47035e-08, 0, 1, -2.98023e-08, -3.72529e-08, 8.9407e-08, 0.999999, -2.65599e-09, 0.47963, 0.2)
layers = 2
height = 0.3
material = ExtResource("5_3wou3")

[node name="needle" type="CSGBox3D" parent="Cockpit/Seat/pilot_rig/gauges/energy_gauge/energy_needle"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, -1)
layers = 2
size = Vector3(1, 1, 16)
material = ExtResource("5_nrjpl")

[node name="energy_text" type="Label3D" parent="Cockpit/Seat/pilot_rig/gauges/energy_gauge"]
transform = Transform3D(0.999307, -0.023733, 0.0224656, -0.0224755, -3.50808e-08, 0.999747, -0.0296587, -0.799648, -0.000666806, -0.699385, 0.47965, -0.138384)
pixel_size = 0.008
shaded = true
texture_filter = 0
modulate = Color(0.862745, 0.862745, 0.862745, 1)
outline_modulate = Color(1, 1, 1, 1)
text = "300"
font = ExtResource("9_8bc5l")
font_size = 80
outline_size = 0
horizontal_alignment = 2

[node name="heat_gauge" type="Node3D" parent="Cockpit/Seat/pilot_rig/gauges" node_paths=PackedStringArray("gauge_needle", "gauge_text")]
transform = Transform3D(-0.000121266, 0.4, -0.000100702, 0.00406702, -9.94653e-05, -0.399979, -0.399979, -0.000122294, -0.00406697, -0.286901, 0.12221, 0)
script = ExtResource("5_4oxq5")
type = 2
gauge_needle = NodePath("heat_needle")
gauge_text = NodePath("heat_text")

[node name="heat_needle" type="CSGCylinder3D" parent="Cockpit/Seat/pilot_rig/gauges/heat_gauge"]
transform = Transform3D(0.999999, 2.98023e-08, -4.47035e-08, 0, 1, -2.98023e-08, -3.72529e-08, 8.9407e-08, 0.999999, 0, 0.6, 0.2)
layers = 2
height = 0.3
material = ExtResource("5_3wou3")

[node name="needle" type="CSGBox3D" parent="Cockpit/Seat/pilot_rig/gauges/heat_gauge/heat_needle"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, -1)
layers = 2
size = Vector3(1, 1, 16)
material = ExtResource("5_nrjpl")

[node name="heat_text" type="Label3D" parent="Cockpit/Seat/pilot_rig/gauges/heat_gauge"]
transform = Transform3D(1, -1.1921e-08, -6.51352e-16, 0, -3.49691e-08, 1, -1.49012e-08, -0.8, -4.37114e-08, -0.97356, 0.59, -0.199069)
pixel_size = 0.008
shaded = true
texture_filter = 0
modulate = Color(0.864675, 0.864675, 0.864675, 1)
outline_modulate = Color(1, 1, 1, 1)
text = "99"
font = ExtResource("9_8bc5l")
font_size = 80
outline_size = 0
horizontal_alignment = 2

[node name="interface" parent="Cockpit/Seat/pilot_rig" instance=ExtResource("15_w2gm3")]
transform = Transform3D(-0.00168232, 0, -0.00627852, 0, 0.0065, 0, 0.00627852, 0, -0.00168232, 0.023, -0.034, -0.032)

[node name="attitude_sphere" type="CSGSphere3D" parent="Cockpit/Seat/pilot_rig/interface"]
transform = Transform3D(20, 0, 1.54972e-07, 0, 20, 0, -1.54972e-07, 0, 20, -0.0251515, 1, 1.94889e-10)
layers = 2
radius = 0.05
radial_segments = 16
rings = 16
material = ExtResource("12_5y86p")
script = ExtResource("12_6ek3y")

[node name="speedometer_text" type="Label3D" parent="Cockpit/Seat/pilot_rig/interface"]
transform = Transform3D(-2.23517e-08, 0, 0.5, 0, 0.5, 0, -0.5, 0, -2.23517e-08, 0.927625, 0.989926, -3.26419)
pixel_size = 0.008
shaded = true
texture_filter = 0
modulate = Color(0.0962049, 0.0962047, 0.0962049, 1)
outline_modulate = Color(1, 1, 1, 1)
text = "00.0"
font = ExtResource("16_h7tg4")
font_size = 230
outline_size = 0
horizontal_alignment = 2
script = ExtResource("17_vwp1p")

[node name="UI" type="Node3D" parent="Cockpit"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, -0.2)

[node name="Reticle" type="Node3D" parent="Cockpit/UI"]

[node name="TargetCast" type="ShapeCast3D" parent="Cockpit/UI/Reticle"]
shape = SubResource("ConvexPolygonShape3D_7s8xn")
target_position = Vector3(0, 0, 0)
margin = 0.04
max_results = 1
collision_mask = 256

[node name="box" type="Sprite3D" parent="Cockpit/UI/Reticle"]
transform = Transform3D(-2.6, 0, -2.27299e-07, 0, 2.6, 0, 2.27299e-07, 0, -2.6, 0, 0, 0)
pixel_size = 0.0001
double_sided = false
alpha_cut = 1
texture = ExtResource("12_go2wy")

[node name="crosshair" type="Label3D" parent="Cockpit/UI/Reticle"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)
visible = false
pixel_size = 0.0001
texture_filter = 0
outline_modulate = Color(0, 0, 0, 0)
text = "><"
font = ExtResource("3_tsdjv")
font_size = 100
outline_size = 0

[node name="Sphere" type="Node3D" parent="Cockpit"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, -0.0147359)
top_level = true
script = ExtResource("14_y10qh")

[node name="walk_sphere" type="Node3D" parent="Cockpit/Sphere"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.2, 0)

[node name="cockpit_sphere" parent="Cockpit/Sphere/walk_sphere" instance=ExtResource("6_swywl")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)

[node name="grapple" parent="Cockpit/Sphere/walk_sphere" instance=ExtResource("8_5mu7g")]
transform = Transform3D(-5.68248e-09, 0, -0.13, 0, 0.13, 0, 0.13, 0, -5.68248e-09, 0, -0.615502, -0.267904)

[node name="cable_controller" type="Node3D" parent="Cockpit/Sphere/walk_sphere"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.8, -1.5)
visible = false

[node name="grapple_cable" type="CSGCylinder3D" parent="Cockpit/Sphere/walk_sphere/cable_controller"]
transform = Transform3D(1.50475, 0, 0, 0, -4.38498e-08, -1.00317, 0, 1.00317, -4.38498e-08, -0.000695884, -0.00207834, -0.500199)
radius = 0.05
height = 1.0
sides = 4
material = ExtResource("10_lnno2")

[node name="roll_sphere" type="Node3D" parent="Cockpit/Sphere"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.2, 0)
visible = false

[node name="cockpit_sphere" parent="Cockpit/Sphere/roll_sphere" instance=ExtResource("7_ov2p3")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)
